buggery/tests/errors/missing_retval.bgr
test:
  X = t2

# No return value
t2:
  print ("")
